--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -39,7 +39,6 @@
             </div>
         </div>
     </nav>
-
     <div class="top_img">
         <div class="text_top">
             <div class="top_text">
@@ -48,7 +47,6 @@
         </div>
     </div>
 </section>
-
 
 <section class="about_top">
     <div class="container">
@@ -150,7 +148,6 @@
                             this</p>
                     </div>
                     <br>
-
                     <div class="goal_main_text">
                         <h5><i class="fas fa_icon fa-star"></i>Commitment</h5>
                         <p>Make a difference in Quality, Excellence & Services.</p>
@@ -187,14 +184,18 @@
                         <p>Our vision is to secure Om Sai Fire Systems as the leading company in Maharashtra for
                             Firefighting systems by the year 2020.</p></div>
                     <br>
-
                     <div class="mission_main_text">
 
-                        <p><i class="fas fa_icon fa-star"></i>Accelerate growth by expanding into various markets which are growing exponentially.</p>
-                        <p><i class="fas fa_icon fa-star"></i>Develop and Promote Technologically Sound Fire Services.</p>
-                        <p><i class="fas fa_icon fa-star"></i>Introduce and penetrate the brand name into the larger market for Fire Protection targeting Pune and PCMC areas.</p>
-                        <p><i class="fas fa_icon fa-star"></i>Working on delivering fully integrated service set up backed up by industry veterans.</p>
-                        <p><i class="fas fa_icon fa-star"></i>Working towards setting up newer guidelines for effective Fire Safety solutions aimed at the comfort of the end user.</p>
+                        <p><i class="fas fa_icon fa-star"></i>Accelerate growth by expanding into various markets which
+                            are growing exponentially.</p>
+                        <p><i class="fas fa_icon fa-star"></i>Develop and Promote Technologically Sound Fire Services.
+                        </p>
+                        <p><i class="fas fa_icon fa-star"></i>Introduce and penetrate the brand name into the larger
+                            market for Fire Protection targeting Pune and PCMC areas.</p>
+                        <p><i class="fas fa_icon fa-star"></i>Working on delivering fully integrated service set up
+                            backed up by industry veterans.</p>
+                        <p><i class="fas fa_icon fa-star"></i>Working towards setting up newer guidelines for effective
+                            Fire Safety solutions aimed at the comfort of the end user.</p>
 
                     </div>
                 </div>
@@ -258,7 +259,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-
-
 </body>
 </html>
