--- a/activities/annual_day_2018/index.html
+++ b/activities/annual_day_2018/index.html
@@ -149,7 +149,8 @@ background-size: cover; /* Resize the background image to cover the entire conta
             <div class="row">
                 <div class="col-12 col-md-12 col-lg-5 footer_col">
                     <div class="footer_about">
-                        <h3>WORBAY</h3>
+                        <img style="height: 40px;margin-bottom: 20px" class="footer_logo" src="../../Worbay_logo.png" alt="">
+
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab consectetur deserunt dignissimos
                             enim
                             eos, esse facilis, laudantium nisi odit omnis qui ut! Corporis ducimus ea eaque esse
@@ -161,8 +162,8 @@ background-size: cover; /* Resize the background image to cover the entire conta
                 <div class="col-6 col-md-4 col-lg-3 footer_col">
                     <div class="footer_about">
                         <h3>QUICK LINKS</h3>
-                        <p><a href="#">Home</a> <br><a href="#">About US</a> <br><a href="#">Products</a> <br><a
-                                href="#">Clients</a> <br><a href="#">Projects</a> <br><a href="#">Contact</a> <br></p>
+                        <p><a href="../../index.html">Home</a> <br><a href="../../aboutus">About Us</a> <br><a href="#">Products</a> <br><a
+                                href="../../clients">Clients</a> <br><a href="../../projects">Projects</a> <br><a href="#">Contact</a> <br></p>
                     </div>
                 </div>
 
