--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="../aos.css">
     <script src="https://kit.fontawesome.com/df65e24a0c.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap CSS -->
@@ -14,6 +15,7 @@
     <title>Worbay | About Us</title>
 </head>
 <style>
+
     .offcanvas {
         background-color: black;
     }
@@ -38,7 +40,7 @@
 <section class="top_section">
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top" style="background-color: #000000c2;padding: 20px 10px">
         <div class="container-lg">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../index.html">
                 <img src="../Worbay_logo.png" alt="" height="40px"
                      class="d-inline-block align-text-top">
             </a>
@@ -68,7 +70,7 @@
                             <a class="nav_custom nav_custom_active" href="../aboutus">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav_custom" href="#">Products</a>
+                            <a class="nav_custom" href="../products">Products</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav_custom dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -97,7 +99,7 @@
     </nav>
     <div class="top_img">
         <div class="text_top">
-            <div class="top_text">
+            <div data-aos="zoom-in" data-aos-duration="1500" class="top_text">
                 <h1>ABOUT WORBAY</h1>
             </div>
         </div>
@@ -105,7 +107,7 @@
 </section>
 
 <section class="about_top">
-    <div class="container">
+    <div data-aos="fade-up" class="container">
         <div class="row align-items-center">
             <div class="col-12 col-md-6 order-md-last">
                 <div class="about_info">
@@ -121,7 +123,7 @@
                 <div class="info_img_div">
                     <div class="pannel_outer">
                         <div class="panel-body ">
-                            <div class="info_img">
+                            <div  data-aos="zoom-out"class="info_img">
                                 <img class="img_1" src="images/fire_est_1.jpg" alt="">
                             </div>
                         </div>
@@ -132,19 +134,19 @@
     </div>
 </section>
 
-<section class="achievements">
+<section data-aos="fade-up" class="achievements">
     <div class="achieve_top_div">
         <h2>We Can Achieve Together</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium, beatae dolor ex expedita illum
             molestiae officia quae</p></div>
     <div class="container">
         <div class="row justify-content-center">
-            <div data-aos="fade-right" class="col-6 col-md-5 col-lg-4 justify-content-center total_users_col">
+            <div data-aos="zoom-in-up" class="col-6 col-md-5 col-lg-4 justify-content-center total_users_col">
                 <div class="project_border">
                     <h2>&nbsp;<span id="projects"></span>+</h2>
                     <P>Projects</P></div>
             </div>
-            <div data-aos="fade-left" class="col-6 col-md-5 col-lg-4 justify-content-center total_users_col">
+            <div data-aos="zoom-in-up" class="col-6 col-md-5 col-lg-4 justify-content-center total_users_col">
                 <div class="project_border">
                     <h2>&nbsp;<span id="clients"></span>+</h2>
                     <P>Clients</P></div>
@@ -161,7 +163,7 @@
     </script>
 </section>
 
-<section class="about_top">
+<section data-aos="fade-up" class="about_top">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-12 col-md-6">
@@ -177,7 +179,7 @@
                 <div class="info_img_div">
                     <div class="pannel_outer_2">
                         <div class="panel-body_2 ">
-                            <div class="info_img_2">
+                            <div data-aos="zoom-out" class="info_img_2">
                                 <img class="img_2" src="images/fire_safety.jpg" alt="">
                             </div>
                         </div>
@@ -192,7 +194,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-12 col-md-6">
-                <div class="goal_img_div">
+                <div data-aos="zoom-in" class="goal_img_div">
                     <img class="img_sticker" src="images/sticker.png" alt="">
                 </div>
             </div>
@@ -205,19 +207,24 @@
                     </div>
                     <br>
                     <div class="goal_main_text">
-                        <h5><i class="fas fa_icon fa-star"></i>Commitment</h5>
-                        <p>Make a difference in Quality, Excellence & Services.</p>
-
-                        <h5><i class="fas fa_icon fa-star"></i>Accuracy</h5>
-                        <p>A Commitment To Gathering & Evaluating Information About Our Field In As Careful, Precise &
-                            Error Free Manner As Possible.</p>
-
-                        <h5><i class="fas fa_icon fa-star"></i>Caring</h5>
-                        <p>Maintain respectful Relation with Customer, Suppliers, Communities & Employee.</p>
-
-                        <h5><i class="fas fa_icon fa-star"></i>Professionalism</h5>
-                        <p>At work, When Communicating with everyone, everyday behavior &Actions, When representing our
-                            company.</p>
+                        <div data-aos="fade-up">
+                            <h5><i class="fas fa_icon fa-star"></i>Commitment</h5>
+                            <p>Make a difference in Quality, Excellence & Services.</p>
+                        </div>
+                        <div data-aos="fade-up">
+                            <h5><i class="fas fa_icon fa-star"></i>Accuracy</h5>
+                            <p>A Commitment To Gathering & Evaluating Information About Our Field In As Careful, Precise
+                                & Error Free Manner As Possible.</p>
+                        </div>
+                        <div data-aos="fade-up">
+                            <h5><i class="fas fa_icon fa-star"></i>Caring</h5>
+                            <p>Maintain respectful Relation with Customer, Suppliers, Communities & Employee.</p>
+                        </div>
+                        <div data-aos="fade-up">
+                            <h5><i class="fas fa_icon fa-star"></i>Professionalism</h5>
+                            <p>At work, When Communicating with everyone, everyday behavior &Actions, When representing
+                                our company.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -229,7 +236,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-12 col-md-6 ">
-                <div class="goal_img_div">
+                <div data-aos="zoom-in" class="goal_img_div">
                     <img class="img_sticker" src="images/mission_sticker.png" alt="">
                 </div>
             </div>
@@ -241,18 +248,21 @@
                             Firefighting systems by the year 2020.</p></div>
                     <br>
                     <div class="mission_main_text">
-
-                        <p><i class="fas fa_icon fa-star"></i>Accelerate growth by expanding into various markets which
+                        <p data-aos="fade-up"><i class="fas fa_icon fa-star"></i>Accelerate growth by expanding into
+                            various markets which
                             are growing exponentially.</p>
-                        <p><i class="fas fa_icon fa-star"></i>Develop and Promote Technologically Sound Fire Services.
+                        <p data-aos="fade-up"><i class="fas fa_icon fa-star"></i>Develop and Promote Technologically
+                            Sound Fire Services.
                         </p>
-                        <p><i class="fas fa_icon fa-star"></i>Introduce and penetrate the brand name into the larger
+                        <p data-aos="fade-up"><i class="fas fa_icon fa-star"></i>Introduce and penetrate the brand
+                            name into the larger
                             market for Fire Protection targeting Pune and PCMC areas.</p>
-                        <p><i class="fas fa_icon fa-star"></i>Working on delivering fully integrated service set up
+                        <p data-aos="fade-up"><i class="fas fa_icon fa-star"></i>Working on delivering fully
+                            integrated service set up
                             backed up by industry veterans.</p>
-                        <p><i class="fas fa_icon fa-star"></i>Working towards setting up newer guidelines for effective
+                        <p data-aos="fade-up"><i class="fas fa_icon fa-star"></i>Working towards setting up newer
+                            guidelines for effective
                             Fire Safety solutions aimed at the comfort of the end user.</p>
-
                     </div>
                 </div>
             </div>
@@ -266,7 +276,8 @@
             <div class="row">
                 <div class="col-12 col-md-12 col-lg-5 footer_col">
                     <div class="footer_about">
-                        <img style="height: 40px;margin-bottom: 20px" class="footer_logo" src="../Worbay_logo.png" alt="">
+                        <img style="height: 40px;margin-bottom: 20px" class="footer_logo" src="../Worbay_logo.png"
+                             alt="">
 
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab consectetur deserunt dignissimos
                             enim
@@ -279,8 +290,10 @@
                 <div class="col-6 col-md-4 col-lg-3 footer_col">
                     <div class="footer_about">
                         <h3>QUICK LINKS</h3>
-                        <p><a href="../index.html">Home</a> <br><a href="../aboutus">About Us</a> <br><a href="#">Products</a> <br><a
-                                href="../clients">Clients</a> <br><a href="../projects">Projects</a> <br><a href="#">Contact</a> <br></p>
+                        <p><a href="../index.html">Home</a> <br><a href="../aboutus">About Us</a> <br><a href="#">Products</a>
+                            <br><a
+                                    href="../clients">Clients</a> <br><a href="../projects">Projects</a> <br><a
+                                    href="#">Contact</a> <br></p>
                     </div>
                 </div>
 
@@ -311,6 +324,10 @@
 
 <!-- Optional JavaScript; choose one of the two! -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!-- script for animation -->
+<script src="../aos.js"></script>
+<script type="text/javascript">AOS.init();</script>
+<!-- script for animation -->
 <script src="about.js"></script>
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
