--- a/activities/annual_day_2018/index.html
+++ b/activities/annual_day_2018/index.html
@@ -7,6 +7,7 @@
     <link href="../activities.css" rel="stylesheet">
     <link rel="stylesheet" href="../post.css">
     <script src="https://kit.fontawesome.com/df65e24a0c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../../aos.css">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -72,7 +73,7 @@ background-size: cover; /* Resize the background image to cover the entire conta
                             <a class="nav_custom" href="../../aboutus">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav_custom" href="#">Products</a>
+                            <a class="nav_custom" href="../../products">Products</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav_custom dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -101,7 +102,7 @@ background-size: cover; /* Resize the background image to cover the entire conta
     </nav>
     <div class="top_img">
         <div class="text_top">
-            <div class="top_text">
+            <div data-aos="zoom-in" data-aos-duration="1500" class="top_text">
                 <h1>ANNUAL DAY</h1>
             </div>
         </div>
@@ -110,7 +111,7 @@ background-size: cover; /* Resize the background image to cover the entire conta
 
 <section class="main_body">
     <div class="container">
-        <div class="clearfix">
+        <div data-aos="fade-up" class="clearfix">
             <img src="../images/annual_day_main.jpeg" class="col-12 col-md-4 float-md-end mb-3 ms-md-3" alt="...">
             <div class="event_info">
                 <a href="#">
@@ -125,7 +126,7 @@ background-size: cover; /* Resize the background image to cover the entire conta
     </div>
 </section>
 <section class="gallery">
-    <div class="container">
+    <div data-aos="fade-up" class="container">
         <h4>EVENT GALLERY</h4>
         <br>
         <div class="img_window"><img class="gallery_images"
@@ -192,7 +193,11 @@ background-size: cover; /* Resize the background image to cover the entire conta
 </footer>
 
 <!-- Optional JavaScript; choose one of the two! -->
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!-- script for animation -->
+<script src="../../aos.js"></script>
+<script type="text/javascript">AOS.init();</script>
+<!-- script for animation -->
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
