--- a/activities/annual_strategy_meet_2018/index.html
+++ b/activities/annual_strategy_meet_2018/index.html
@@ -7,7 +7,7 @@
     <link href="../activities.css" rel="stylesheet">
     <link rel="stylesheet" href="../post.css">
     <script src="https://kit.fontawesome.com/df65e24a0c.js" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="../../aos.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -72,7 +72,7 @@ background-size: cover; /* Resize the background image to cover the entire conta
                             <a class="nav_custom" href="../../aboutus">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav_custom" href="#">Products</a>
+                            <a class="nav_custom" href="../../products">Products</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav_custom dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -101,7 +101,7 @@ background-size: cover; /* Resize the background image to cover the entire conta
     </nav>
     <div class="top_img">
         <div class="text_top">
-            <div class="top_text">
+            <div data-aos="zoom-in" data-aos-duration="1500"  class="top_text">
                 <h1>ANNUAL STRATEGY MEET</h1>
             </div>
         </div>
@@ -110,7 +110,7 @@ background-size: cover; /* Resize the background image to cover the entire conta
 
 <section class="main_body">
     <div class="container">
-        <div class="clearfix">
+        <div data-aos="fade-up" class="clearfix">
             <img src="../images/annual_strategy_meet_main.jpeg" class="col-12 col-md-4 float-md-end mb-3 ms-md-3"
                  alt="...">
             <div class="event_info">
@@ -133,7 +133,7 @@ background-size: cover; /* Resize the background image to cover the entire conta
     </div>
 </section>
 <section class="gallery">
-    <div class="container">
+    <div data-aos="fade-up" class="container">
         <h4>EVENT GALLERY</h4>
         <br>
         <div class="img_window"><img class="gallery_images"
@@ -169,7 +169,8 @@ background-size: cover; /* Resize the background image to cover the entire conta
             <div class="row">
                 <div class="col-12 col-md-12 col-lg-5 footer_col">
                     <div class="footer_about">
-                        <img style="height: 40px;margin-bottom: 20px" class="footer_logo" src="../../Worbay_logo.png" alt="">
+                        <img style="height: 40px;margin-bottom: 20px" class="footer_logo" src="../../Worbay_logo.png"
+                             alt="">
 
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab consectetur deserunt dignissimos
                             enim
@@ -182,8 +183,10 @@ background-size: cover; /* Resize the background image to cover the entire conta
                 <div class="col-6 col-md-4 col-lg-3 footer_col">
                     <div class="footer_about">
                         <h3>QUICK LINKS</h3>
-                        <p><a href="../../index.html">Home</a> <br><a href="../../aboutus">About Us</a> <br><a href="#">Products</a> <br><a
-                                href="../../clients">Clients</a> <br><a href="../../projects">Projects</a> <br><a href="#">Contact</a> <br></p>
+                        <p><a href="../../index.html">Home</a> <br><a href="../../aboutus">About Us</a> <br><a href="#">Products</a>
+                            <br><a
+                                    href="../../clients">Clients</a> <br><a href="../../projects">Projects</a> <br><a
+                                    href="#">Contact</a> <br></p>
                     </div>
                 </div>
 
@@ -212,7 +215,11 @@ background-size: cover; /* Resize the background image to cover the entire conta
 </footer>
 
 <!-- Optional JavaScript; choose one of the two! -->
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!-- script for animation -->
+<script src="../../aos.js"></script>
+<script type="text/javascript">AOS.init();</script>
+<!-- script for animation -->
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
