--- a/activities/constro_2018/index.html
+++ b/activities/constro_2018/index.html
@@ -7,7 +7,7 @@
     <link href="../activities.css" rel="stylesheet">
     <link rel="stylesheet" href="../post.css">
     <script src="https://kit.fontawesome.com/df65e24a0c.js" crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" href="../../aos.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -70,7 +70,7 @@
                             <a class="nav_custom" href="../../aboutus">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav_custom" href="#">Products</a>
+                            <a class="nav_custom" href="../../products">Products</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav_custom dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -99,7 +99,7 @@
     </nav>
     <div class="top_img">
         <div class="text_top">
-            <div class="top_text">
+            <div  data-aos="zoom-in" data-aos-duration="1500"  class="top_text">
                 <h1>CONSTRO 2018</h1>
             </div>
         </div>
@@ -108,7 +108,7 @@
 
 <section class="main_body">
     <div class="container">
-        <div class="clearfix">
+        <div data-aos="fade-up" class="clearfix">
             <img src="../images/constro_full.jpeg" class="col-12 col-md-4 float-md-end mb-3 ms-md-3" alt="...">
             <div class="event_info">
                 <a href="#">
@@ -130,7 +130,7 @@
     </div>
 </section>
 <section class="gallery">
-    <div class="container">
+    <div data-aos="fade-up" class="container">
         <h4>EVENT GALLERY</h4>
         <br>
         <div class="img_window"><img class="gallery_images"
@@ -200,7 +200,11 @@
 </footer>
 
 <!-- Optional JavaScript; choose one of the two! -->
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!-- script for animation -->
+<script src="../../aos.js"></script>
+<script type="text/javascript">AOS.init();</script>
+<!-- script for animation -->
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
