--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="styles.css" rel="stylesheet">
-
     <script src="https://kit.fontawesome.com/df65e24a0c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="aos.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -31,7 +31,6 @@
         color: #216bac;
         font-weight: 700;
     }
-
 </style>
 
 <body class="body">
@@ -69,7 +68,7 @@
                             <a class="nav_custom" href="aboutus">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav_custom" href="#">Products</a>
+                            <a class="nav_custom" href="products">Products</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav_custom dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -99,7 +98,7 @@
 
     <div class="top_img">
         <div class="text_top">
-            <div class="top_text">
+            <div  data-aos="zoom-in" data-aos-duration="1500" class="top_text">
                 <h1>WOR<span style="color:#216bac"><u>BAY</u></span></h1>
                 <div class="wrapper">
                     <div class="typing-demo">
@@ -113,7 +112,7 @@
 <section class="about_main">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-5 about_col_out">
+            <div data-aos="fade-up" class="col-12 col-md-5 about_col_out">
                 <div class="vision_img">
                     <div class="vision_overlay">
                         <div class="vision_main_window">
@@ -129,7 +128,7 @@
                 </div>
             </div>
 
-            <div class="col-12 col-md-7 about_col_out">
+            <div data-aos="fade-up" class="col-12 col-md-7 about_col_out">
                 <div class="about_top">
                     <div class="about_overlay">
                         <h2>ABOUT US</h2>
@@ -149,34 +148,34 @@
         </div>
     </div>
 </section>
-<section class="core-values">
+<section data-aos="fade-up" class="core-values">
     <h2 class="core_title">WORBAY'S CORE VALUES</h2>
     <div class="container">
         <div class="row gx-0">
             <div class="col-6 col-sm-6 col-lg-3 core_1">
                 <div class="core_body">
-                    <h2><i class="fas fa-handshake fa_figures"></i></h2>
+                    <h2 data-aos="zoom-in"><i class="fas fa-handshake fa_figures"></i></h2>
                     <h3>COMMITMENT</h3>
                     <p>Make a difference through quality, excellence & services</p>
                 </div>
             </div>
             <div class="col-6 col-sm-6 col-lg-3 core_2">
                 <div class="core_body">
-                    <h2><i class="fas fa-bullseye fa_figures"></i></h2>
+                    <h2 data-aos="zoom-in"><i class="fas fa-bullseye fa_figures"></i></h2>
                     <h3>ACCURACY</h3>
                     <p>A Commitment To Gathering & Evaluating Information About Our Field In As Careful</p>
                 </div>
             </div>
             <div class="col-6 col-sm-6 col-lg-3 core_3">
                 <div class="core_body">
-                    <h2><i class="fas fa-hand-holding-medical fa_figures"></i></h2>
+                    <h2 data-aos="zoom-in"><i class="fas fa-hand-holding-medical fa_figures"></i></h2>
                     <h3>CARING</h3>
                     <p>Maintain respectful Relation with Customer, Suppliers, Communities & Employee</p>
                 </div>
             </div>
             <div class="col-6 col-sm-6 col-lg-3 core_4">
                 <div class="core_body">
-                    <h2><i class="fas fa-user-tie fa_figures"></i></h2>
+                    <h2 data-aos="zoom-in"><i class="fas fa-user-tie fa_figures"></i></h2>
                     <h3>PROFESSIONALISM</h3>
                     <p>At work, When Communicating with everyone, everyday behavior & Actions</p>
                 </div>
@@ -185,7 +184,7 @@
     </div>
 </section>
 
-<section class="services">
+<section data-aos="fade-up" class="services">
     <div class="container">
         <h2 class="service_title">OUR SERVICES</h2>
         <div class="row justify-content-center gx-1">
@@ -321,7 +320,7 @@
 <section class="testimonials">
     <div class="container">
         <h2>TESTIMONIALS</h2>
-        <div class="testim_main">
+        <div  data-aos="fade-up" class="testim_main">
             <img class="reviewers_img" src="images/profile_img.jpg" alt="">
             <div class="testim_text">
                 <h3>❝</h3>
@@ -340,10 +339,10 @@
     </div>
 </section>
 
-<section class="clients">
+<section   class="clients">
     <div class="container">
         <h2>OUR CLIENTS</h2>
-        <div class="row">
+        <div data-aos="fade-right" class="row">
             <div class="MultiCarousel" data-items="2,3,5,6" data-slide="1" id="MultiCarousel" data-interval="1000">
                 <div class="MultiCarousel-inner">
                     <div class="item">
@@ -504,7 +503,10 @@
 <!-- Optional JavaScript; choose one of the two! -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="index.js"></script>
-
+<!-- script for animation -->
+<script src="aos.js"></script>
+<script type="text/javascript">AOS.init();</script>
+<!-- script for animation -->
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
