--- a/projects/index.html
+++ b/projects/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="projects.css" rel="stylesheet">
+    <link rel="stylesheet" href="../aos.css">
     <script src="https://kit.fontawesome.com/df65e24a0c.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap CSS -->
@@ -70,7 +71,7 @@
                             <a class="nav_custom" href="../aboutus">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav_custom" href="#">Products</a>
+                            <a class="nav_custom" href="../products">Products</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav_custom dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -99,7 +100,7 @@
     </nav>
     <div class="top_img">
         <div class="text_top">
-            <div class="top_text">
+            <div  data-aos="zoom-in" data-aos-duration="1500" class="top_text">
                 <h1>OUR PROJECTS</h1>
             </div>
         </div>
@@ -110,7 +111,7 @@
     <div class="container-lg">
         <div class="row">
             <div class="col-6  col-sm-4 col-md-3 col-lg-2 ">
-                <div class="project_col">
+                <div data-aos="fade-up" class="project_col">
                     <div class="image_pannel">
                         <img src="images/33-Milestone-by-Labh-Promoter-builders.jpeg" alt="">
                     </div>
@@ -121,7 +122,7 @@
             </div>
 
             <div class="col-6  col-sm-4 col-md-3 col-lg-2 ">
-                <div class="project_col">
+                <div data-aos="fade-up" class="project_col">
                     <div class="image_pannel">
                         <img src="images/Ace-Almoghty-by-Jhamtani-Group-image.jpeg" alt="">
                     </div>
@@ -133,7 +134,7 @@
 
 
             <div class="col-6  col-sm-4 col-md-3 col-lg-2 ">
-                <div class="project_col">
+                <div data-aos="fade-up" class="project_col">
                     <div class="image_pannel">
                         <img src="images/Adi-Amma-by-JN-Builder.png" alt="">
                     </div>
@@ -144,7 +145,7 @@
             </div>
 
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 ">
-                <div class="project_col">
+                <div data-aos="fade-up" class="project_col">
                     <div class="image_pannel">
                         <img src="images/Aditya-Homeopathic-Hospital.png" alt="">
                     </div>
@@ -155,7 +156,7 @@
             </div>
 
             <div class="col-6  col-sm-4 col-md-3 col-lg-2 ">
-                <div class="project_col">
+                <div data-aos="fade-up" class="project_col">
                     <div class="image_pannel">
                         <img src="images/Aksha-Group-Empire.png" alt="">
                     </div>
@@ -166,7 +167,7 @@
             </div>
 
             <div class="col-6  col-sm-4 col-md-3 col-lg-2 ">
-                <div class="project_col">
+                <div data-aos="fade-up" class="project_col">
                     <div class="image_pannel">
                         <img src="images/Aksha-Vridavan-of-Aksha-Group-image-29122017.png" alt="">
                     </div>
@@ -231,7 +232,11 @@
 </footer>
 
 <!-- Optional JavaScript; choose one of the two! -->
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!-- script for animation -->
+<script src="../aos.js"></script>
+<script type="text/javascript">AOS.init();</script>
+<!-- script for animation -->
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
