--- a/products/index.html
+++ b/products/index.html
@@ -62,7 +62,7 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav_custom " href="#">Home</a>
+                            <a class="nav_custom " href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav_custom" href="../aboutus">About Us</a>
