--- a/services/amcservice.html
+++ b/services/amcservice.html
@@ -4,12 +4,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="../activities.css" rel="stylesheet">
-    <link rel="stylesheet" href="../post.css">
+    <link href="services.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/df65e24a0c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../../aos.css">
-    <link rel="stylesheet" href="../../header_footer.css">
-    <link rel=icon href="../../worbay_icon.png">
+    <link rel="stylesheet" href="../aos.css">
+    <link rel="stylesheet" href="../header_footer.css">
+    <link rel=icon href="../worbay_icon.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;0,800;0,900;1,400&family=Noto+Sans:wght@400;700&display=swap"
@@ -18,8 +18,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>CONSTRO 2018 | Worbay</title>
+    <title>AMC Services | Worbay</title>
 </head>
 <style>
     .offcanvas {
@@ -41,14 +40,19 @@
         font-weight: 700;
     }
 
+    .top_section {
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)), url("images/turnkey_back.jpg") no-repeat center;
+        background-size: cover;
+    }
 </style>
-<body>
-<section class="top_section"
-         style="background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)), url('images/image-Constro 2018-3.jpeg') no-repeat center; background-size: cover; ">
+
+<body class="body">
+
+<section class="top_section">
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top" style="background-color: #000000c2;padding: 20px 10px">
         <div class="container-lg">
-            <a class="navbar-brand" href="../../index.html">
-                <img src="../../Worbay_logo.png" alt="" height="40px"
+            <a class="navbar-brand" href="#">
+                <img src="../Worbay_logo.png" alt="" height="40px"
                      class="d-inline-block align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
@@ -59,8 +63,8 @@
                  aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header" style="background-color: black; opacity: 1; color: white">
                     <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-                        <a class="navbar-brand" href="../../index.html">
-                            <img src="../../Worbay_logo.png" alt="" height="50px"
+                        <a class="navbar-brand" href="#">
+                            <img src="../Worbay_logo.png" alt="" height="50px"
                                  class="d-inline-block align-text-top">
                         </a>
                     </h5>
@@ -71,102 +75,111 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav_custom " href="../../index.html">Home</a>
+                            <a class="nav_custom " href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav_custom" href="../../aboutus">About Us</a>
+                            <a class="nav_custom" href="../aboutus">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav_custom" href="../../products">Products</a>
+                            <a class="nav_custom" href="../products">Products</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav_custom dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            <a class="nav_custom dropdown-toggle nav_custom_active" href="#" id="navbarDropdownMenuLink" role="button"
                                data-bs-toggle="dropdown" aria-expanded="false">
                                 Services
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="../../services/turnkey.html">Turnkey Solution</a>
-                                </li>
-                                <li><a class="dropdown-item" href="../../services/productdist.html">Product
-                                    Distribution</a></li>
-                                <li><a class="dropdown-item" href="../../services/amcservice.html">ACM services</a></li>
+                                <li><a class="dropdown-item" href="turnkey.html">Turnkey Solution</a></li>
+                                <li><a class="dropdown-item" href="productdist.html">Product Distribution</a></li>
+                                <li><a class="dropdown-item" href="amcservice.html">ACM services</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav_custom " href="../../projects">Projects</a>
+                            <a class="nav_custom" href="../projects">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav_custom " href="../../clients">Clients</a>
+                            <a class="nav_custom" href="../clients">Clients</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav_custom nav_custom_active" href="../../activities">Activities</a>
+                            <a class="nav_custom" href="../activities">Activities</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
     </nav>
+
     <div class="top_img">
         <div class="text_top">
             <div data-aos="zoom-in" data-aos-duration="1500" class="top_text">
-                <h1>CONSTRO 2018</h1>
+                <h1>AMC SERVICE</h1>
             </div>
         </div>
     </div>
 </section>
 
 <div class="whatsaap">
-    <a target="_blank"
-       href="https://web.whatsapp.com/send?phone=+917774095101&amp;text=Hi, I would like to get more information.."
-       class="footer-link whatsapplink hidemobile">
-        <img src="../../whatsapp.png" alt="whatsaap">
-    </a>
+<a target="_blank" href="https://web.whatsapp.com/send?phone=+917774095101&amp;text=Hi, I would like to get more information.."
+   class="footer-link whatsapplink hidemobile">
+    <img src="../whatsapp.png" alt="whatsaap">
+</a>
 </div>
 
-<section class="main_body">
+<section class="turnkey_main_window">
     <div class="container">
-        <div data-aos="fade-up" class="clearfix">
-            <img src="../images/constro_full.jpeg" class="col-12 col-md-4 float-md-end mb-3 ms-md-3" alt="...">
-            <div class="event_info">
-                <a href="#">
-                    <h2>CONSTRO 2018</h2>
-                    <h3>Constro International Fair, flagship event of PCERF</h3>
-                </a>
-                <p class="date_text">Event Date <span class="date_main">18th to 21st January 2018</span></p>
-                <br>
-                <p>Constro International Fair, flagship event of PCERF started in the year 1985, is now credited amongst
-                    the largest event in the Infrastructure & Civil Engineering industry in India.Constro 2018 15th
-                    edition, is an inclusive International Fair that exhibits Construction Machinery, Materials, Methods
-                    & Projects in Pune, This Exhibition has also been recognized by ITPO New Delhi, supported by reputed
-                    industry associations, academic institutes and participated by hundreds of companies from India and
-                    few from abroad.OM SAI FIRE SYSTEMS has participated in this event between 18th Jan 2018 to 21st Jan
-                    2018. We got such a biggest platform to represent our work & services towards society. Also we got
-                    very good response and best deals. We learnt a lot from this event. </p>
+        <div class="row justify-content-center align-items-center turnkey_row">
+            <div class="col-12 col-md-4 col-lg-4">
+                <div data-aos="zoom-out" class="image_pannel">
+                    <img class="img_1" src="images/aftersell.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="col-12 col-md-8 col-lg-6">
+                <div data-aos="zoom-out" class="text_pannel">
+                    <h3>After Sales</h3>
+                    <p>We are providing AMC service after sales too. Sometimes client required AMC after 6 months or
+                        year after fire fighting systems installation and we reach upto clients to resolve their fire
+                        fighting systems related issues. </p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row justify-content-center align-items-center turnkey_row">
+            <div class="col-12 col-md-4 col-lg-4 order-md-last">
+                <div data-aos="zoom-out" class="image_pannel">
+                    <img class="img_1" src="images/turnkey-services.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="col-12 col-md-8 col-lg-6">
+                <div data-aos="zoom-out" class="text_pannel">
+                    <h3>Support</h3>
+                    <p>We provide all kind of support after fire fighting systems installation as per availability and
+                        requirement. </p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row justify-content-center align-items-center turnkey_row">
+            <div class="col-12 col-md-4 col-lg-4">
+                <div data-aos="zoom-out" class="image_pannel">
+                    <img class="img_1" src="images/maintainance_amc.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="col-12 col-md-8 col-lg-6">
+                <div data-aos="zoom-out" class="text_pannel">
+                    <h3>Maintenance of the Fire Protection Systems</h3>
+                    <p>We are repairing parts of the fire fighting system and and our engineers are providing all kind
+                        of support regarding AMC, Maintenance of fire fighting equipment or parts. </p>
+                </div>
             </div>
         </div>
     </div>
 </section>
-<section class="gallery">
-    <div data-aos="fade-up" class="container">
-        <h4>EVENT GALLERY</h4>
-        <br>
-        <div class="img_window"><img class="gallery_images"
-                                     src="images/image-Constro%202018-1.jpeg"
-                                     alt=""></div>
-        <div class="img_window"><img class="gallery_images"
-                                     src="images/image-Constro%202018-2.jpeg"
-                                     alt=""></div>
-        <div class="img_window"><img class="gallery_images"
-                                     src="images/image-Constro%202018-3.jpeg"
-                                     alt=""></div>
-        <div class="img_window"><img class="gallery_images"
-                                     src="images/image-Constro%202018-4.jpeg"
-                                     alt=""></div>
-        <div class="img_window"><img class="gallery_images"
-                                     src="images/image-Constro%202018-5.jpeg"
-                                     alt=""></div>
-    </div>
-</section>
+
 
 <footer>
     <div class="footer_div">
@@ -174,7 +187,7 @@
             <div class="row">
                 <div class="col-12 col-md-12 col-lg-5 footer_col">
                     <div class="footer_about">
-                        <img style="height: 40px;margin-bottom: 20px" class="footer_logo" src="../../Worbay_logo.png"
+                        <img style="height: 40px;margin-bottom: 20px" class="footer_logo" src="../Worbay_logo.png"
                              alt="">
 
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab consectetur deserunt dignissimos
@@ -188,10 +201,9 @@
                 <div class="col-6 col-md-4 col-lg-3 footer_col">
                     <div class="footer_about">
                         <h3>QUICK LINKS</h3>
-                        <p><a href="../index.html">Home</a> <br><a href="../../aboutus">About Us</a> <br><a
-                                href="../../products">Products</a>
+                        <p><a href="../index.html">Home</a> <br><a href="../aboutus">About Us</a> <br><a href="../products">Products</a>
                             <br><a
-                                    href="../../clients">Clients</a> <br><a href="../../projects">Projects</a> <br><a
+                                    href="../clients">Clients</a> <br><a href="../projects">Projects</a> <br><a
                                     href="#">Contact</a> <br></p>
                     </div>
                 </div>
@@ -199,9 +211,7 @@
                 <div class="col-6 col-md-4 col-lg-2 footer_col">
                     <div class="footer_about">
                         <h3>SERVICES</h3>
-                        <p><a href="../../services/turnkey.html">Turnkey Solution</a> <br><a
-                                href="../../services/productdist.html">Product Distribution</a> <br><a
-                                href="../../services/amcservice.html">AMC
+                        <p><a href="../services/turnkey.html">Turnkey Solution</a> <br><a href="../services/productdist.html">Product Distribution</a> <br><a href="../services/amcservice.html">AMC
                             Service</a></p>
                     </div>
                 </div>
@@ -216,8 +226,7 @@
                 </div>
             </div>
             <div class="creator">
-                <p>Designed by <a href="https://satyamportfolio.herokuapp.com/">Satyam Baldawa</a> | © 2022 Worbay, All
-                    Rights Reserved</p>
+                <p>Designed by <a href="https://satyamportfolio.herokuapp.com/">Satyam Baldawa</a> | © 2022 Worbay, All Rights Reserved</p>
             </div>
         </div>
     </div>
@@ -226,7 +235,7 @@
 <!-- Optional JavaScript; choose one of the two! -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <!-- script for animation -->
-<script src="../../aos.js"></script>
+<script src="../aos.js"></script>
 <script type="text/javascript">AOS.init();</script>
 <!-- script for animation -->
 
@@ -234,6 +243,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-
 </body>
 </html>
