--- a/activities/annual_strategy_meet_2018/index.html
+++ b/activities/annual_strategy_meet_2018/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../post.css">
     <script src="https://kit.fontawesome.com/df65e24a0c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../aos.css">
+    <link rel="stylesheet" href="../../header_footer.css">
+     <link rel=icon href="../../worbay_icon.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -42,7 +44,7 @@
 background-size: cover; /* Resize the background image to cover the entire container */">
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top" style="background-color: #000000c2;padding: 20px 10px">
         <div class="container-lg">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../../index.html">
                 <img src="../../Worbay_logo.png" alt="" height="40px"
                      class="d-inline-block align-text-top">
             </a>
@@ -54,7 +56,7 @@ background-size: cover; /* Resize the background image to cover the entire conta
                  aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header" style="background-color: black; opacity: 1; color: white">
                     <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand" href="../../index.html">
                             <img src="../../Worbay_logo.png" alt="" height="50px"
                                  class="d-inline-block align-text-top">
                         </a>
@@ -80,9 +82,9 @@ background-size: cover; /* Resize the background image to cover the entire conta
                                 Services
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="../../services/turnkey.html">Turnkey Solution</a></li>
+                                <li><a class="dropdown-item" href="../../services/productdist.html">Product Distribution</a></li>
+                                <li><a class="dropdown-item" href="../../services/amcservice.html">ACM services</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -107,6 +109,13 @@ background-size: cover; /* Resize the background image to cover the entire conta
         </div>
     </div>
 </section>
+
+<div class="whatsaap">
+<a target="_blank" href="https://web.whatsapp.com/send?phone=+917774095101&amp;text=Hi, I would like to get more information.."
+   class="footer-link whatsapplink hidemobile">
+    <img src="../../whatsapp.png" alt="whatsaap">
+</a>
+</div>
 
 <section class="main_body">
     <div class="container">
@@ -183,7 +192,7 @@ background-size: cover; /* Resize the background image to cover the entire conta
                 <div class="col-6 col-md-4 col-lg-3 footer_col">
                     <div class="footer_about">
                         <h3>QUICK LINKS</h3>
-                        <p><a href="../../index.html">Home</a> <br><a href="../../aboutus">About Us</a> <br><a href="#">Products</a>
+                        <p><a href="../index.html">Home</a> <br><a href="../../aboutus">About Us</a> <br><a href="../../products">Products</a>
                             <br><a
                                     href="../../clients">Clients</a> <br><a href="../../projects">Projects</a> <br><a
                                     href="#">Contact</a> <br></p>
@@ -193,7 +202,7 @@ background-size: cover; /* Resize the background image to cover the entire conta
                 <div class="col-6 col-md-4 col-lg-2 footer_col">
                     <div class="footer_about">
                         <h3>SERVICES</h3>
-                        <p><a href="#">Turnkey Solution</a> <br><a href="#">Product Distribution</a> <br><a href="#">ACM
+                        <p><a href="../../services/turnkey.html">Turnkey Solution</a> <br><a href="../../services/productdist.html">Product Distribution</a> <br><a href="../../services/amcservice.html">AMC
                             Service</a></p>
                     </div>
                 </div>
@@ -208,7 +217,7 @@ background-size: cover; /* Resize the background image to cover the entire conta
                 </div>
             </div>
             <div class="creator">
-                <p>Designed by <a href="">Satyam Baldawa</a> | 2022 Worbay, All Rights Reserved</p>
+                <p>Designed by <a href="https://satyamportfolio.herokuapp.com/">Satyam Baldawa</a> | © 2022 Worbay, All Rights Reserved</p>
             </div>
         </div>
     </div>
