--- a/activities/paani_foundation_2017/index.html
+++ b/activities/paani_foundation_2017/index.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../activities.css" rel="stylesheet">
     <link rel="stylesheet" href="../post.css">
+    <link rel="stylesheet" href="../../header_footer.css">
+
     <script src="https://kit.fontawesome.com/df65e24a0c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../aos.css">
+     <link rel=icon href="../../worbay_icon.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -40,7 +43,7 @@
          style="background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)), url('../images/paani_foundation_full.jpeg') no-repeat center; background-size: cover;">
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top" style="background-color: #000000c2;padding: 20px 10px">
         <div class="container-lg">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="../../index.html">
                 <img src="../../Worbay_logo.png" alt="" height="40px"
                      class="d-inline-block align-text-top">
             </a>
@@ -52,7 +55,7 @@
                  aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header" style="background-color: black; opacity: 1; color: white">
                     <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand" href="../../index.html">
                             <img src="../../Worbay_logo.png" alt="" height="50px"
                                  class="d-inline-block align-text-top">
                         </a>
@@ -78,9 +81,9 @@
                                 Services
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                <li><a class="dropdown-item" href="../../services/turnkey.html">Turnkey Solution</a></li>
+                                <li><a class="dropdown-item" href="../../services/productdist.html">Product Distribution</a></li>
+                                <li><a class="dropdown-item" href="../../services/amcservice.html">ACM services</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -105,6 +108,13 @@
         </div>
     </div>
 </section>
+
+<div class="whatsaap">
+<a target="_blank" href="https://web.whatsapp.com/send?phone=+917774095101&amp;text=Hi, I would like to get more information.."
+   class="footer-link whatsapplink hidemobile">
+    <img src="../../whatsapp.png" alt="whatsaap">
+</a>
+</div>
 
 <section class="main_body">
     <div class="container">
@@ -140,7 +150,8 @@
             <div class="row">
                 <div class="col-12 col-md-12 col-lg-5 footer_col">
                     <div class="footer_about">
-                        <img style="height: 40px;margin-bottom: 20px" class="footer_logo" src="../../Worbay_logo.png" alt="">
+                        <img style="height: 40px;margin-bottom: 20px" class="footer_logo" src="../../Worbay_logo.png"
+                             alt="">
 
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab consectetur deserunt dignissimos
                             enim
@@ -153,15 +164,17 @@
                 <div class="col-6 col-md-4 col-lg-3 footer_col">
                     <div class="footer_about">
                         <h3>QUICK LINKS</h3>
-                        <p><a href="../../index.html">Home</a> <br><a href="../../aboutus">About Us</a> <br><a href="#">Products</a> <br><a
-                                href="../../clients">Clients</a> <br><a href="../../projects">Projects</a> <br><a href="#">Contact</a> <br></p>
+                        <p><a href="../index.html">Home</a> <br><a href="../../aboutus">About Us</a> <br><a href="../../products">Products</a>
+                            <br><a
+                                    href="../../clients">Clients</a> <br><a href="../../projects">Projects</a> <br><a
+                                    href="#">Contact</a> <br></p>
                     </div>
                 </div>
 
                 <div class="col-6 col-md-4 col-lg-2 footer_col">
                     <div class="footer_about">
                         <h3>SERVICES</h3>
-                        <p><a href="#">Turnkey Solution</a> <br><a href="#">Product Distribution</a> <br><a href="#">ACM
+                        <p><a href="../../services/turnkey.html">Turnkey Solution</a> <br><a href="../../services/productdist.html">Product Distribution</a> <br><a href="../../services/amcservice.html">AMC
                             Service</a></p>
                     </div>
                 </div>
@@ -176,7 +189,7 @@
                 </div>
             </div>
             <div class="creator">
-                <p>Designed by <a href="">Satyam Baldawa</a> | 2022 Worbay, All Rights Reserved</p>
+                <p>Designed by <a href="https://satyamportfolio.herokuapp.com/">Satyam Baldawa</a> | © 2022 Worbay, All Rights Reserved</p>
             </div>
         </div>
     </div>
