--- a/services/productdist.html
+++ b/services/productdist.html
@@ -4,10 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="projects.css" rel="stylesheet">
+    <link href="services.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/df65e24a0c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../aos.css">
     <link rel="stylesheet" href="../header_footer.css">
-    <script src="https://kit.fontawesome.com/df65e24a0c.js" crossorigin="anonymous"></script>
     <link rel=icon href="../worbay_icon.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,8 +18,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>Projects by Worbay</title>
+    <title>Product Distribution | Worbay</title>
 </head>
 <style>
     .offcanvas {
@@ -41,6 +40,10 @@
         font-weight: 700;
     }
 
+    .top_section {
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.6)), url("images/turnkey_back.jpg") no-repeat center;
+        background-size: cover;
+    }
 </style>
 
 <body class="body">
@@ -48,7 +51,7 @@
 <section class="top_section">
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top" style="background-color: #000000c2;padding: 20px 10px">
         <div class="container-lg">
-            <a class="navbar-brand" href="../index.html">
+            <a class="navbar-brand" href="#">
                 <img src="../Worbay_logo.png" alt="" height="40px"
                      class="d-inline-block align-text-top">
             </a>
@@ -60,7 +63,7 @@
                  aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header" style="background-color: black; opacity: 1; color: white">
                     <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-                        <a class="navbar-brand" href="../index.html">
+                        <a class="navbar-brand" href="#">
                             <img src="../Worbay_logo.png" alt="" height="50px"
                                  class="d-inline-block align-text-top">
                         </a>
@@ -81,19 +84,18 @@
                             <a class="nav_custom" href="../products">Products</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav_custom dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            <a class="nav_custom dropdown-toggle nav_custom_active" href="#" id="navbarDropdownMenuLink" role="button"
                                data-bs-toggle="dropdown" aria-expanded="false">
                                 Services
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="../services/turnkey.html">Turnkey Solution</a></li>
-                                <li><a class="dropdown-item" href="../services/productdist.html">Product
-                                    Distribution</a></li>
-                                <li><a class="dropdown-item" href="../services/amcservice.html">ACM services</a></li>
+                                <li><a class="dropdown-item" href="turnkey.html">Turnkey Solution</a></li>
+                                <li><a class="dropdown-item" href="productdist.html">Product Distribution</a></li>
+                                <li><a class="dropdown-item" href="amcservice.html">ACM services</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav_custom nav_custom_active" href="../projects">Projects</a>
+                            <a class="nav_custom" href="../projects">Projects</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav_custom" href="../clients">Clients</a>
@@ -106,99 +108,107 @@
             </div>
         </div>
     </nav>
+
     <div class="top_img">
         <div class="text_top">
             <div data-aos="zoom-in" data-aos-duration="1500" class="top_text">
-                <h1>OUR PROJECTS</h1>
+                <h1>PRODUCT DISTRIBUTION</h1>
             </div>
         </div>
     </div>
 </section>
 
 <div class="whatsaap">
-    <a target="_blank"
-       href="https://web.whatsapp.com/send?phone=+917774095101&amp;text=Hi, I would like to get more information.."
-       class="footer-link whatsapplink hidemobile">
-        <img src="../whatsapp.png" alt="whatsaap">
-    </a>
+<a target="_blank" href="https://web.whatsapp.com/send?phone=+917774095101&amp;text=Hi, I would like to get more information.."
+   class="footer-link whatsapplink hidemobile">
+    <img src="../whatsapp.png" alt="whatsaap">
+</a>
 </div>
 
-<section class="projects_main">
-    <div class="container-lg">
-        <div class="row">
-            <div class="col-6  col-sm-4 col-md-3 col-lg-2 ">
-                <div data-aos="fade-up" class="project_col">
-                    <div class="image_pannel">
-                        <img src="images/33-Milestone-by-Labh-Promoter-builders.jpeg" alt="">
-                    </div>
-                    <div class="project_text">
-                        <p>33 Milestone By Labh Promoter Builders</p>
-                    </div>
+<section class="turnkey_main_window">
+    <div class="container">
+        <div class="row justify-content-center align-items-center turnkey_row">
+            <div class="col-12 col-md-4 col-lg-4">
+                <div data-aos="zoom-out" class="image_pannel">
+                    <img class="img_1" src="images/product-smoke-detector.jpg" alt="">
                 </div>
             </div>
 
-            <div class="col-6  col-sm-4 col-md-3 col-lg-2 ">
-                <div data-aos="fade-up" class="project_col">
-                    <div class="image_pannel">
-                        <img src="images/Ace-Almoghty-by-Jhamtani-Group-image.jpeg" alt="">
-                    </div>
-                    <div class="project_text">
-                        <p>Ace Almoghty By Jhamtani Group</p>
-                    </div>
+            <div class="col-12 col-md-8 col-lg-6">
+                <div data-aos="zoom-out" class="text_pannel">
+                    <h3>Fire Detectors & Control Panels</h3>
+                    <p>Fire Alarm Systems ( Addressable & Conventional) Fire detectors sense one or more of the products
+                        or phenomena resulting from fire, such as smoke, heat, infrared and/or ultraviolet light
+                        radiation, or gas.In dwellings, smoke detectors are often stand-alone devices. <span
+                                class="abc pdFireDetector"> In non-domestic
+                        buildings, fire detection will typically take the form of a fire alarm system, incorporating one
+                        or more of the following automatic devices: Heat detectorSmoke detectorFlame detectorFire gas
+                        detector 89.
+                        <br> A fire alarm control panel (FACP), fire alarm control unit (FACU), or simply fire alarm panel
+                            is the controlling component of a fire alarm system. The panel receives information from devices
+                            designed to detect and report fires, monitors their operational integrity and provides for automatic
+                            control of equipment, and transmission of information necessary to prepare the facility for fire based
+                            on a predetermined sequence. The panel may also supply electrical energy to operate any associated initiating
+                            device, notification appliance, control, transmitter, or relay. There are four basic types of panels: coded panels,
+                            conventional panels, addressable panels, and multiplex systems. </span>
+                    </p>
+
+                    <button id="pdFireDetector" class="custom_button button_blue button_1">Read More</button>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row justify-content-center align-items-center turnkey_row">
+            <div class="col-12 col-md-4 col-lg-4 order-md-last">
+                <div data-aos="zoom-out" class="image_pannel">
+                    <img class="img_1" src="images/extinguisherportable.jpg" alt="">
                 </div>
             </div>
 
+            <div class="col-12 col-md-8 col-lg-6">
+                <div data-aos="zoom-out" class="text_pannel">
+                    <h3>Portable Fire Extinguishers</h3>
+                    <p>Portable fire extinguishers apply an extinguishing agent that will either cool burning fuel,
+                        displace or remove oxygen, or stop the chemical reaction so a fire cannot continue to burn. When
+                        the handle of an extinguisher is compressed, agent is expelled out the nozzle. <span
+                                class="abc pdPortableExt">There are so many
+                        types of portable extinguishers such as 1. ABC Dry Chemical Fire Extinguisher. 2. Kitchen Class
+                        K Fire Extinguisher. 3. Carbon Dioxide Fire Extinguisher.4. Halotron 1 Fire Extinguisher.
+                            Etc.</span></p>
 
-            <div class="col-6  col-sm-4 col-md-3 col-lg-2 ">
-                <div data-aos="fade-up" class="project_col">
-                    <div class="image_pannel">
-                        <img src="images/Adi-Amma-by-JN-Builder.png" alt="">
-                    </div>
-                    <div class="project_text">
-                        <p>Adi Amma By JN Builder</p>
-                    </div>
+                    <button id="pdPortableExt" class="custom_button button_blue button_1">Read More</button>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row justify-content-center align-items-center turnkey_row">
+            <div class="col-12 col-md-4 col-lg-4">
+                <div data-aos="zoom-out" class="image_pannel">
+                    <img class="img_1" src="images/fire-fighting-equipments.jpg" alt="">
                 </div>
             </div>
 
-            <div class="col-6 col-sm-4 col-md-3 col-lg-2 ">
-                <div data-aos="fade-up" class="project_col">
-                    <div class="image_pannel">
-                        <img src="images/Aditya-Homeopathic-Hospital.png" alt="">
-                    </div>
-                    <div class="project_text">
-                        <p>Aditya Homeopathic Hospital</p>
-                    </div>
+            <div class="col-12 col-md-8 col-lg-6">
+                <div data-aos="zoom-out" class="text_pannel">
+                    <h3>Fire Fighting system Accessories</h3>
+                    <p>Along with fire extinguisher, all the commercial and residential buildings are required by law,
+                        to have Automatic Fire Fighting Equipments like Hydrant Valve, Nozzles, hose coupling and more.
+                        These equipments are used to form a complete Wet Riser System to ensure fire fighting <span
+                                class="abc pdAccessories">
+                        arrangements for more intense and dangerous fires. Our wide array of fire fighting accessories
+                        are available at the most reasonable prices, which can be installed as per the guidelines of
+                            local fire authority. </span></p>
+
+                    <button id="pdAccessories" class="custom_button button_blue button_1">Read More</button>
                 </div>
             </div>
-
-            <div class="col-6  col-sm-4 col-md-3 col-lg-2 ">
-                <div data-aos="fade-up" class="project_col">
-                    <div class="image_pannel">
-                        <img src="images/Aksha-Group-Empire.png" alt="">
-                    </div>
-                    <div class="project_text">
-                        <p>Aksha Group Empire <br><br></p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-6  col-sm-4 col-md-3 col-lg-2 ">
-                <div data-aos="fade-up" class="project_col">
-                    <div class="image_pannel">
-                        <img src="images/Aksha-Vridavan-of-Aksha-Group-image-29122017.png" alt="">
-                    </div>
-                    <div class="project_text">
-                        <p>Aksha Vridavan Of Aksha Group</p>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </div>
 </section>
 
 
-<!--footer-->
 <footer>
     <div class="footer_div">
         <div class="container">
@@ -219,8 +229,7 @@
                 <div class="col-6 col-md-4 col-lg-3 footer_col">
                     <div class="footer_about">
                         <h3>QUICK LINKS</h3>
-                        <p><a href="../index.html">Home</a> <br><a href="../aboutus">About Us</a> <br><a
-                                href="../products">Products</a>
+                        <p><a href="../index.html">Home</a> <br><a href="../aboutus">About Us</a> <br><a href="../products">Products</a>
                             <br><a
                                     href="../clients">Clients</a> <br><a href="../projects">Projects</a> <br><a
                                     href="#">Contact</a> <br></p>
@@ -230,9 +239,7 @@
                 <div class="col-6 col-md-4 col-lg-2 footer_col">
                     <div class="footer_about">
                         <h3>SERVICES</h3>
-                        <p><a href="../services/turnkey.html">Turnkey Solution</a> <br><a
-                                href="../services/productdist.html">Product Distribution</a> <br><a
-                                href="../services/amcservice.html">AMC
+                        <p><a href="../services/turnkey.html">Turnkey Solution</a> <br><a href="../services/productdist.html">Product Distribution</a> <br><a href="../services/amcservice.html">AMC
                             Service</a></p>
                     </div>
                 </div>
@@ -247,8 +254,7 @@
                 </div>
             </div>
             <div class="creator">
-                <p>Designed by <a href="https://satyamportfolio.herokuapp.com/">Satyam Baldawa</a> | © 2022 Worbay, All
-                    Rights Reserved</p>
+                <p>Designed by <a href="https://satyamportfolio.herokuapp.com/">Satyam Baldawa</a> | © 2022 Worbay, All Rights Reserved</p>
             </div>
         </div>
     </div>
@@ -260,11 +266,10 @@
 <script src="../aos.js"></script>
 <script type="text/javascript">AOS.init();</script>
 <!-- script for animation -->
-
+<script src="../products/product.js"></script>
 <!-- Option 1: Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-
 </body>
 </html>
